[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/granada.png" type="Texture" id=1]
[ext_resource path="res://Assets/PowerUps/Granada.gd" type="Script" id=2]
[ext_resource path="res://Engine/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/explosion-try.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 6.71358

[sub_resource type="Animation" id=2]
resource_name = "Explosion"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[node name="Granada" type="RigidBody2D"]
collision_layer = 0
collision_mask = 17
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="Explosion" type="Sprite" parent="."]
visible = false
position = Vector2( 6, 1 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )
vframes = 2
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explosion = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true
autostart = true

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -0.18729, 0 )
shape = SubResource( 3 )
disabled = true
[connection signal="body_entered" from="." to="." method="_on_Granada_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hitbox"]
